--- a/10_margin과padding.html
+++ b/10_margin과padding.html
@@ -10,7 +10,7 @@
         .box{
             width: 600px;
             height: 400px;
-            /* 상하좌우 4방향 border 테두리를 기주능로 안쪽에 여백이 추가된다 */
+            /* 상하좌우 4방향 border 테두리를 기준으로 안쪽에 여백이 추가된다 */
             padding: 20px;
 
             /* top, bottom, right, left */
